--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -1,47 +1,37 @@
-name: Test Code
+name: build and push and update
 
 on:
-  pull_request:
-    branches:
-    - master
   push:
-    branches:
-    - master
-
+    branches: [ "develop" ]
 jobs:
-  test-code:
-    runs-on: ubuntu-20.04
-
+  build_push_update:
+    name: build and push and update
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v2
+      - name: checkout
+        uses: actions/checkout@master
+        with:
+          ref: develop
+      - name: Docker meta
+        id: meta
+        uses: crazy-max/ghaction-docker-meta@v2
+        with:
+          images: |
+            perrorone/origintrail-parachain
+          tags: |
+            type=sha
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{  secrets.DOCKER_PASSWORD }}
 
-      # Steps taken from https://github.com/actions/cache/blob/master/examples.md#rust---cargo
-    - name: Cache cargo registry
-      uses: actions/cache@v2
-      with:
-        path: |
-          ~/.cargo/registry
-          ~/.cargo/git
-          target
-        key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-
-    - name: Install toolchain
-      uses: actions-rs/toolchain@v1
-      with:
-        profile: minimal
-        toolchain: nightly-2021-04-18
-        components: rustfmt, clippy
-        target: wasm32-unknown-unknown
-        override: true
-        default: true
-
-    # Enable this for clippy linting.
-    # - name: Check and Lint Code
-    #   run: cargo +nightly-2020-05-07 clippy -- -D warnings
-
-    - name: Check Code
-      run: cargo check
-
-    - name: Test Code
-      run: cargo test
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          repository: perrorone/origintrail-parachain
+          tag_with_sha: true
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
