--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -12,6 +12,13 @@ jobs:
         uses: actions/checkout@master
         with:
           ref: develop
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver: docker-container
+          driver-opts: |
+            image=moby/buildkit:master
+            network=host
       - name: Docker meta
         id: meta
         uses: crazy-max/ghaction-docker-meta@v2
@@ -27,7 +34,7 @@ jobs:
           password: ${{  secrets.DOCKER_PASSWORD }}
 
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           repository: perrorone/origintrail-parachain
           tag_with_sha: true
@@ -35,3 +42,5 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
